manifests/apps/media/bazarr/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bazarr
  namespace: media
  labels:
    app: media-manager
    component: bazarr
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: media-manager
      component: bazarr
  template:
    metadata:
      labels:
        app: media-manager
        component: bazarr
    spec:
      hostname: bazarr
      containers:
      - image: linuxserver/bazarr:1.6.1
        name: bazarr
        ports:
        - containerPort: 6767
          name: webui
          protocol: TCP
        resources:
          requests:
            cpu: 10m
            memory: 256Mi
          limits:
            cpu: 500m
            memory: 512Mi
        volumeMounts:
        - name: config
          mountPath: /config
        - name: movies
          mountPath: /data/movies
        - name: tvseries
          mountPath: /data/tv
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: kubernetes.io/hostname
                operator: NotIn
                values:
                - peggy
      volumes:
      - name: config
        persistentVolumeClaim:
          claimName: bazarr-pvc
      - name: movies
        nfs:
          server: 10.0.0.13
          path: /mnt/data/library/movies
      - name: tvseries
        nfs:
          server: 10.0.0.13
          path: /mnt/data/library/tvseries
      restartPolicy: Always
