manifests/apps/media/bazarr/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: bazarr-svc
  namespace: media
  labels:
    app: media-manager
    component: bazarr
spec:
  selector:
    app: media-manager
    component: bazarr
  ports:
  - port: 6767
    name: webui
    protocol: TCP
