manifests/apps/media/bazarr/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bazarr
  namespace: media
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - subs.frias.app
      secretName: subs-frias-app-tls
  rules:
    - host: subs.frias.app
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bazarr-svc
                port:
                  number: 6767
